--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>Weather website uses mapbox.com and weatherstack.com to fetch data. </p>
         <img src="img/me.jpg">
     </div>
 
